--- a/RISHI'S PORTFOLIO/assets/css/style.css
+++ b/RISHI'S PORTFOLIO/assets/css/style.css
@@ -846,89 +846,18 @@ main {
  */
 
 .timeline-text li::before {
-  content: "\2022";  /* Unicode for bullet point */
-  color: gold;       /* Change bullet color to gold */
-  font-weight: bold; /* If you want a bolder bullet */
+  content: "\2022";  
+  color: gold;       
+  font-weight: bold; 
   display: inline-block;
-  width: 1em;        /* Also works with 1em */
-  margin-left: -1em; /* Adjust as needed */
+  width: 1em;        
+  margin-left: -1em; 
 }
 
 .timeline-text li {
-  list-style-type: none; /* Remove default bullets */
-  padding-left: 1em;     /* Add some padding to align text */
+  list-style-type: none; 
+  padding-left: 1em;     
 }
-
-/**
- * experience image logo 
- */
-
-/* .timeline-item {
-  position: relative;
-  padding-left: 30px;
-}
-
-.timeline-item-header {
-  display: flex;
-  align-items: flex-start;
-  margin-bottom: 10px;
-}
-
-.company-logo {
-  width: 48px;
-  height: 48px;
-  margin-right: 15px;
-  overflow: hidden;
-  border-radius: 8px; 
-}
-
-.company-logo img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-
-.timeline-item-content {
-  flex: 1;
-} */
-
-/**
- * skills 
- */
-
-.skills-title { margin-bottom: 20px; }
-
-.skills-list { padding: 20px; }
-
-
-.skills-item:not(:last-child) { margin-bottom: 15px; }
-
-.skill .title-wrapper {
-  display: flex;
-  align-items: center;
-  gap: 5px;
-  margin-bottom: 8px;
-}
-
-.skill .title-wrapper data {
-  color: var(--light-gray);
-  font-size: var(--fs-7);
-  font-weight: var(--fw-300);
-}
-
-.skill-progress-bg {
-  background: var(--jet);
-  width: 100%;
-  height: 8px;
-  border-radius: 10px;
-}
-
-.skill-progress-fill {
-  background: var(--text-gradient-yellow);
-  height: 100%;
-  border-radius: inherit;
-}
-
 
 
 
